# apw

./: .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  README.md  project.bootstrap.yaml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/scripts/: verify-version-sync.sh
.github/workflows/: claude.yml  extended-validation.yml  lint.yml  pr-fast-ci.yml  release.yml  rust-ci.yml
browser-bridge/: background.js  bridge-controller.js  bridge-controller.test.js  manifest.json  package.json  popup.html  popup.js
docs/: ARCHIVE_POLICY.md  INSTALLATION.md  MIGRATION_AND_PARITY.md  NATIVE_MIGRATION.md  NATIVE_ONLY_REDESIGN.md  SECURITY_POSTURE_AND_TESTING.md  STANDALONE_BREAKOUT.md
docs/bootstrap/: claude-environment.md  codex-cloud-environment.md  next-steps.md  onboarding.md
legacy/deno/: README.md  deno.json
native-app/: Package.swift
native-app/Sources/: main.swift
packaging/homebrew/: apw.rb  install-from-source.sh
rust/: Cargo.toml
rust/src/: cli.rs  client.rs  daemon.rs  error.rs  host.rs  main.rs  native_app.rs  secrets.rs  srp.rs  types.rs  utils.rs
rust/tests/: legacy_parity.rs  native_app_e2e.rs  security_regressions.rs
scripts/: bootstrap-apw-native-standalone.sh  browser-host-smoke.sh  build-apw-release.sh  build-native-app.sh  check-detect-secrets.sh  install-browser-bridge.sh  release-bootstrap.sh
scripts/ci/: run-extended-validation.sh  run-fast-checks.sh
scripts/claude/: setup-devcontainer.sh
scripts/claude-cloud/: setup.sh
src/: cli.test.ts  client.test.ts  const.test.ts  daemon.test.ts  utils.test.ts
(+18 files in other folders)
