[package]
name = "apw"
version = "1.2.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3.31"
hex = "0.4.3"
openssl = "0.10.68"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
subtle = "2.6.1"
rpassword = "7.3.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
url = "2.5.4"
rand = { version = "0.8.5", features = ["std", "getrandom"] }

[dev-dependencies]
tempfile = "3.15.0"
serial_test = "3.2.0"
